--- a/front-end/h5/package.json
+++ b/front-end/h5/package.json
@@ -20,6 +20,7 @@
     "@luban-h5/plugin-common-props": "^0.0.1",
     "animate.css": "^3.7.2",
     "ant-design-vue": "^1.3.14",
+    "axios": "^0.19.2",
     "core-js": "^2.6.5",
     "element-ui": "^2.13.0",
     "font-awesome": "4.7.0",
